--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -52,43 +52,43 @@ html,body{ width:100%; height: 100%;color:#333;background-color: #F9F9F9;}
  .price{  color: #FF8E2B;  }
 .el-input__inner::-ms-input-placeholder{
     text-align: left;
-    color: #bababa;
+    color: #bababa !important;
     opacity:1;
 }
 .el-input__inner::-webkit-input-placeholder{
-    color: #bababa;
+    color: #bababa !important;
     opacity:1;
     text-align: left;
 }
 
 .el-input__inner::-moz-placeholder{
-    color: #bababa;
+    color: #bababa !important;
     opacity:1;
     text-align: left;
 }
 .el-input__inner:focus{
-    border-color:#6CA96E;
+    border-color:#6CA96E !important;
 }
 .el-select .el-input__inner:focus{
-    border-color:#6CA96E;
+    border-color:#6CA96E !important;
 }
 .el-dialog__headerbtn:focus .el-dialog__close, .el-dialog__headerbtn:hover .el-dialog__close{
-    color:#6CA96E;
+    color:#6CA96E !important;
 }
 .cart_box .el-table__body-wrapper{
     border-bottom: 1px solid ;
 }
 /*我的用户中表格的样式  */
 .el-table--border td, .el-table--border th{
-	  border-color: #ddd;
+	  border-color: #ddd  ;
   }
   .el-table td, .el-table th.is-leaf{
-	  border-color: #ddd;
+	  border-color: #ddd ;
   }
  .el-table th{
-	  background-color: #f2f2f2;
+	  background-color: #f2f2f2  ;
   }
  .el-table__footer-wrapper thead div, .el-table__header-wrapper thead div{
-	  background-color: #f2f2f2;
+	  background-color: #f2f2f2  ;
   }
 
